# adarkroom-port

./: .gitignore  CHANGELOG.md  ChangeLog.md  README.md  adarkroom-port.cabal  cabal.project.freeze  endlessly.sh  hotreloading.sh  package.yaml  run.sh  stack.yaml  todo.org
.beads/: config.yaml  issues.jsonl  metadata.json
Formula/: adarkroom-port.rb
app/: Event.hs  Main.hs  Outside.hs  Path.hs  RandomEvent.hs  Rewards.hs  SaveGame.hs
app/Path/: Combat.hs  Enemy.hs  Place.hs
app/Room/: Builder.hs  Event.hs  Room.hs
app/Shared/: Constants.hs  Game.hs  GameEvent.hs  Item.hs  PathMap.hs  Place.hs  RandomEvent.hs  Rewards.hs  UI.hs  Util.hs  Worker.hs
app/UI/: Combat.hs  Components.hs  Display.hs  RandomEvent.hs  Rewards.hs
packaging/homebrew/: README.md  adarkroom-port.rb
src/: Builder.hs  Constants.hs  Event.hs  EventsUI.hs  Fire.hs  Game.hs  GameEvent.hs  GameTypes.hs  GameUtil.hs  Outside.hs  Path.hs  RandomEvent.hs  RandomEvents.hs  Room.hs  SaveGame.hs  UI.hs  UIComponents.hs  UIState.hs  Util.hs
src/RandomEvent/: Event.hs  EventType.hs  Handler.hs  Room.hs
src/RandomEvents/: EventType.hs  Room.hs
src/Room/: Builder.hs  Event.hs  Fire.hs  Room.hs
src/Shared/: Constants.hs  Event.hs  Game.hs  GameEvent.hs  Item.hs  RandomEvent.hs  UI.hs  Util.hs
src/UI/: Components.hs  Display.hs  Events.hs  EventsUI.hs  RandomEvent.hs  State.hs  UI.hs  UIComponents.hs  UIState.hs
